style: fix spacing above footer divider

--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -12,7 +12,7 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 64px;
-  padding-bottom: 48px;
+  margin-bottom: 80px;
 }
 
 .brand h3 {
